@@ -31,13 +31,13 @@ $versions=array();
 $versions['AUTHORS']='1.16';
 $versions['LICENSE.txt']='1.2';
 $versions['README']='1.28';
-$versions['Version.php']='1.496.2.4';
-$versions['add_comment.php']='1.26';
+$versions['Version.php']='1.496.2.31';
+$versions['add_comment.php']='1.26.2.1';
 $versions['add_photo.php']='1.18';
 $versions['add_photos.php']='1.49';
 $versions['adv_search.php']='1.8';
-$versions['album_permissions.php']='1.33';
-$versions['albums.php']='1.109';
+$versions['album_permissions.php']='1.33.2.1';
+$versions['albums.php']='1.109.2.1';
 $versions['captionator.php']='1.36';
 $versions['configure.bat']='1.2';
 $versions['configure.sh']='1.4';
@@ -56,13 +56,13 @@ $versions['gallery_remote.php']='1.18';
 $versions['gallery_remote2.php']='1.35';
 $versions['index.php']='1.33';
 $versions['init.php']='1.74';
-$versions['login.php']='1.36';
+$versions['login.php']='1.36.2.1';
 $versions['manage_users.php']='1.26';
 $versions['modify_user.php']='1.28';
 $versions['move_album.php']='1.38';
 $versions['move_photo.php']='1.65';
 $versions['multi_create_user.php']='1.5';
-$versions['new_password.php']='1.3';
+$versions['new_password.php']='1.3.2.1';
 $versions['nls.php']='1.37';
 $versions['photo_owner.php']='1.12';
 $versions['poll_properties.php']='1.8';
@@ -86,10 +86,10 @@ $versions['sort_album.php']='1.23';
 $versions['upgrade_album.php']='1.23';
 $versions['upgrade_users.php']='1.7';
 $versions['user_preferences.php']='1.29';
-$versions['util.php']='1.273.2.2';
-$versions['view_album.php']='1.182';
+$versions['util.php']='1.273.2.8';
+$versions['view_album.php']='1.182.2.1';
 $versions['view_comments.php']='1.20';
-$versions['view_photo.php']='1.151';
+$versions['view_photo.php']='1.151.2.1';
 $versions['view_photo_properties.php']='1.31';
 $versions['classes/Album.php']='1.139';
 $versions['classes/AlbumDB.php']='1.25';
@@ -97,7 +97,7 @@ $versions['classes/AlbumItem.php']='1.59';
 $versions['classes/Comment.php']='1.11';
 $versions['classes/Database.php']='1.7';
 $versions['classes/EverybodyUser.php']='1.10';
-$versions['classes/Image.php']='1.39';
+$versions['classes/Image.php']='1.39.2.1';
 $versions['classes/LoggedInUser.php']='1.6';
 $versions['classes/NobodyUser.php']='1.11';
 $versions['classes/User.php']='1.21';
@@ -113,7 +113,7 @@ $versions['classes/postnuke/UserDB.php']='1.8';
 $versions['classes/postnuke0.7.1/User.php']='1.5';
 $versions['classes/postnuke0.7.1/UserDB.php']='1.4';
 $versions['classes/remote/GalleryRemoteProperties.php']='1.4';
-$versions['css/config.css.default']='1.10';
+$versions['css/config.css.default']='1.10.2.1';
 $versions['css/embedded_style.css.default']='1.4';
 $versions['css/standalone_style.css.default']='1.6';
 $versions['errors/configmode.php']='1.20';
@@ -123,9 +123,9 @@ $versions['errors/reconfigure.php']='1.18';
 $versions['errors/unconfigured.php']='1.18';
 $versions['html/errorRow.inc']='1.6';
 $versions['html/userData.inc']='1.17';
-$versions['html_wrap/album.footer.default']='1.25';
+$versions['html_wrap/album.footer.default']='1.25.2.1';
 $versions['html_wrap/album.header.default']='1.16';
-$versions['html_wrap/gallery.footer.default']='1.30';
+$versions['html_wrap/gallery.footer.default']='1.30.2.1';
 $versions['html_wrap/gallery.header.default']='1.13';
 $versions['html_wrap/inline_albumthumb.footer.default']='1.8';
 $versions['html_wrap/inline_albumthumb.frame.default']='1.16';
@@ -137,11 +137,11 @@ $versions['html_wrap/inline_photo.footer.default']='1.7';
 $versions['html_wrap/inline_photo.frame.default']='1.4';
 $versions['html_wrap/inline_photo.header.default']='1.8';
 $versions['html_wrap/inline_photothumb.frame.default']='1.7';
-$versions['html_wrap/photo.footer.default']='1.17';
+$versions['html_wrap/photo.footer.default']='1.17.2.2';
 $versions['html_wrap/photo.header.default']='1.12';
 $versions['html_wrap/search.footer.default']='1.12';
 $versions['html_wrap/search.header.default']='1.10';
-$versions['html_wrap/slideshow.footer.default']='1.12';
+$versions['html_wrap/slideshow.footer.default']='1.12.2.1';
 $versions['html_wrap/slideshow.header.default']='1.9';
 $versions['html_wrap/wrapper.footer.default']='1.8';
 $versions['html_wrap/wrapper.header.default']='1.14';
@@ -167,25 +167,25 @@ $versions['layout/searchdraw.inc']='1.15';
 $versions['platform/fs_unix.php']='1.19';
 $versions['platform/fs_win32.php']='1.20';
 $versions['setup/.htaccess']='1.16';
-$versions['setup/backup_albums.php']='1.11';
-$versions['setup/check.inc']='1.31';
-$versions['setup/check_imagemagick.php']='1.18';
-$versions['setup/check_mail.php']='1.3';
+$versions['setup/backup_albums.php']='1.11.6.3';
+$versions['setup/check.inc']='1.31.2.1';
+$versions['setup/check_imagemagick.php']='1.18.2.1';
+$versions['setup/check_mail.php']='1.3.2.1';
 $versions['setup/check_netpbm.php']='1.27';
-$versions['setup/check_versions.php']='1.4';
-$versions['setup/config_data.inc']='1.157';
-$versions['setup/confirm.inc']='1.69';
+$versions['setup/check_versions.php']='1.4.2.3';
+$versions['setup/config_data.inc']='1.157.2.2';
+$versions['setup/confirm.inc']='1.69.2.1';
 $versions['setup/constants.inc']='1.27';
-$versions['setup/defaults.inc']='1.19';
-$versions['setup/diagnostics.php']='1.15';
-$versions['setup/functions.inc']='1.142';
+$versions['setup/defaults.inc']='1.19.2.1';
+$versions['setup/diagnostics.php']='1.15.2.1';
+$versions['setup/functions.inc']='1.142.2.5';
 $versions['setup/gpl.txt']='1.5';
 $versions['setup/index.php']='1.38';
-$versions['setup/init.php']='1.34';
+$versions['setup/init.php']='1.34.2.1';
 $versions['setup/mod_rewrite.template']='1.7';
 $versions['setup/php_value.template']='1.6';
 $versions['setup/php_value_ok.php']='1.5';
 $versions['setup/phpinfo.php']='1.5';
-$versions['setup/session_test.php']='1.19';
+$versions['setup/session_test.php']='1.19.2.1';
 $versions['setup/write.inc']='1.47';
 ?>
