@@ -1,3 +1,9 @@
+2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b21
+
+	* Tweaked tools/build_manifest to make it simpler, and clearer.
+
+	* Updated manifest.inc.
+
 2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b20
 
 	* Added check_versions to gallery check page, to check that gallery
